# pubmed-markdown

./: .env.example  Dockerfile  README.md  api.py  pixi.toml  pyproject.toml  requirements.txt
docs/: api_endpoint_plan.md
pubmed_downloader/: __init__.py  copy_markdown.py  html_from_pmcid.py  manage_records.py  markdown_from_html.py  pharmgkb_annotations.py  pmcid_from_pmid.py  pubmed_downloader.py  utils_bioc.py
src/: __init__.py  abstract_from_pmid.py  pubmed_downloader.py  utils_bioc.py
